--- a/odk_fieldmap/templates/project/index.html
+++ b/odk_fieldmap/templates/project/index.html
@@ -33,7 +33,7 @@
         <div>
           <!-- TODO remove hardcoding -->
           <h1>{{ project['title'] }}</h1>
-          <div class="about">by {{ project['username'] }} on {{ project['created'].strftime('%Y-%m-%d') }}</div>
+	  <div class="about">by {{ g.user['username'] }} on {{ project['created'].strftime('%Y-%m-%d') }}</div>
         </div>
         <a class="action" href="{{ url_for('project.map', id=project['id'])}}">Select Task</a>
         {% if g.user['id'] == project['author_id'] %}
