--- a/odk_fieldmap/templates/project/map.html
+++ b/odk_fieldmap/templates/project/map.html
@@ -20,7 +20,7 @@
     <input type="submit" value="Select">
   </form> -->
 
-  <h1>Project tasks</h1> 
+  <h1>Project tasks</h1>
   {% for task in tasks %}
     <article class="project">
       <header>
@@ -49,8 +49,11 @@
    crossorigin=""></script>
 
   <script>
-    function hardcodedMap() {
 
+    var grid_geojson = {{(geojson|default({}))|tojson}};
+    var tasks = {{(tasks|default({}))|tojson}};
+
+    function hardcodedMap() {
       const map = L.map("map").setView([-6.785568, 39.261278], 13);
       const osm = L.tileLayer(
         "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
@@ -61,10 +64,8 @@
         }
       ).addTo(map);
 
-      grid_geojson = "{{url_for('static', filename=project_path+'/grid.geojson')}}";
+      grid = addGeoJSONLayer(map)
 
-      // addGeoJSONLayer(area_geojson, map)
-      grid = addGeoJSONLayer(grid_geojson, map)
       // zoomToProject
       // TODO: Does this work??
       // map.fitBounds(grid.getBounds());
@@ -72,64 +73,55 @@
 
     function createPopup(feature, layer) {
       if (feature.properties && feature.properties.id) {
-        //debugger
         feature_id = feature.properties.id;
-        //tasks = tasks|tojson(indent=2)
-        //task = tasks[feature_id]
+        task = tasks[feature_id];
 
         // this should be set by the same environment variable as PROJECT_FOLDER_PATH
-        qrcode_src = "{{url_for('static', filename=project_path+'/QR_codes/'+project['title']+'_buildings_42.gif')}}";
+        qrcode_src = "{{url_for('static', filename=project_path+'/QR_codes/')}}";
         // hacky way to combine javascript and flask logic
-        final_qrcode_src = qrcode_src.replace("42.gif", ""+feature_id+".gif");
+        final_qrcode_src = qrcode_src+"buildings_"+feature_id+".gif";
 
-        //if (task.status == 'available') {
+        if (task.status != 'Available for mapping') {
         // TODO: add check for if this user created this
-          // if g.user['id'] == task['task_doer'] 
-            layer.setStyle({fillColor:'blue',color: 'black',weight:2,fillOpacity:0.8});
+        if g.user['id'] == task['task_doer']
+          layer.setStyle({fillColor:'blue',color: 'black',weight:2,fillOpacity:0.8});
+          layer.bindPopup(
+            "<h1>Task "+feature_id+"</h1>"+
+            "<p>" + task.status + "</p>"+
+            "<img src='"+final_qrcode_src+"' alt='' height='150px' width='150px'>"+
+            // "<a class='action' href=''>Task has been completed</a>"+
+            "<form action='{{url_for('project.release', id=project['id']) }}"+ "method='post'>"+
+              "<input style=\"display:none;\" name='tasknum' id='tasknum'"+
+                "value='"+feature_id+"' required>"+
+              "<input class='danger' type='submit' value='Release' onclick='return confirm(\'Are you sure?\');'>"+
+            "</form>"
+          )
+        }
+      } else {
+          layer.bindPopup(
+            "<h1>Task "+feature_id+"</h1>"+
+            "<p>" + task.status + "</p>"+
+            "<p>To start field mapping, scan the QR Code using ODK Collect and click 'Assign me this task', so that no one duplicates your work! If you are on your mobile device, select 'Download QR Code'.</p>"+
+            "<img src='"+final_qrcode_src+"' alt='' height='150px' width='150px'>"+
+            "<form method='post'>"+
+              "<input style=\"display:none;\" name='tasknum' id='tasknum'"+
+                "value='"+feature_id+"' required>"+
+              "<label for='id_"+feature_id+"'>Download QR Code</label>"+
+              "<input type='checkbox' id='id_"+feature_id+"'"+ "name='select_extras' value='download'>"+
+              "<input type='submit' value='Assign me this Task'>"+
 
-            layer.bindPopup(
-              "<h1>Task "+feature_id+"</h1>"+
-              "<p>You are responsible for this task.</p>"+
-              "<img src='"+final_qrcode_src+"' alt='' height='150px' width='150px'>"+
-              // "<a class='action' href=''>Task has been completed</a>"+
-              "<form action='{{url_for('project.release', id=project['id']) }}"+ "method='post'>"+
-                "<input style=\"display:none;\" name='tasknum' id='tasknum'"+
-                  "value='"+feature_id+"' required>"+
-                "<input class='danger' type='submit' value='Release' onclick='return confirm(\'Are you sure?\');'>"+
-              "</form>"
-            )
-        //}
-        //else {
-
-        //  layer.bindPopup(
-        //    "<h1>Task "+feature_id+"</h1>"+
-        //    "<p>To start field mapping, scan the QR Code using ODK Collect and click 'Assign me this task', so that no one duplicates your work! If you are on your mobile device, select 'Download QR Code'.</p>"+
-        //    "<img src='"+final_qrcode_src+"' alt='' height='150px' width='150px'>"+
-        //    "<form method='post'>"+
-        //      "<input style=\"display:none;\" name='tasknum' id='tasknum'"+
-        //        "value='"+feature_id+"' required>"+
-        //      "<label for='id_"+feature_id+"'>Download QR Code</label>"+
-        //      "<input type='checkbox' id='id_"+feature_id+"'"+ "name='select_extras' value='download'>"+
-        //      "<input type='submit' value='Assign me this Task'>"+
-
-        //    "</form>"
-        //  )
-        //}
+            "</form>"
+          )
+        }
       }
     }
 
-    function addGeoJSONLayer(url, map) {
-      fetch(url)
-          .then(function(response) {
-            return response.json();
-          })
-          .then(function(data) {
-            layer = L.geoJSON(data, {
-              onEachFeature: createPopup
-            });
-            layer.addTo(map);
-            return layer;
-          })
+    function addGeoJSONLayer(map) {
+      layer = L.geoJSON(grid_geojson, {
+        onEachFeature: createPopup
+      });
+      layer.addTo(map);
+      return layer;
     }
 
     hardcodedMap()
